--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <img src="images/ahmed.jpg" alt="">
-    <a href=""> <button type="button" name="button">github</button></a>
+    <center>
+    <img src="images/ahmed2.jpg" alt=""> <br> <br>
+    <a href="https://github.com/Abdirashid3262"> <button type="button" name="button">github</button></a>
+    <a href="#"> <button type="button" name="button">facebook</button></a>
+    </center>
   </body>
 </html>
