--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
   </head>
   <body>
     <center>
-    <img src="images/ahmed2.jpg" alt=""> <br> <br>
-    <a href="https://github.com/Abdirashid3262"> <button type="button" name="button">github</button></a>
-    <a href="#"> <button type="button" name="button">facebook</button></a>
+    <img src="images/ahmed3.jpg" alt=""> <br> <br>
+    <a href="https://github.com/Abdirashid3262" target="_blank"> <button type="button" name="button">github</button></a>
+    <a href="https://www.instagram.com/ahmed_abdirashid_ali/?hl=en"target="_blank"> <button type="button" name="button">instergram</button></a>
     </center>
+    <center>
+    <h1>About</h1>
+    <p>Name: Ahmed</p>
+    <p>Language: Html, python and java-script</p>
+    <p>Hobby: Play football</p>
+    <p>About me: Succeful bussines man and a professional engineer man</p>
+    </center>
+    <center>
+<h1>Contacts</h1>
+<a href="#"><button type="button" name="button">@gmail.com</button></a>
+    <a href="#"><button type="button" name="button">@facebook.com</button></a>
+    </center>
+
   </body>
 </html>
