--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title></title>
   </head>
   <body>
@@ -12,8 +15,8 @@
     <a href="https://www.instagram.com/ahmed_abdirashid_ali/?hl=en"target="_blank"> <button type="button" name="button">instergram</button></a>
     </center>
     <center>
-    <h1>About</h1>
-    <p>Name: Ahmed</p>
+    <h1>ABOUT</h1>
+    <p>Name: Ahmed Bdirashid Ali</p>
     <p>Language: Html, python and java-script</p>
     <p>Hobby: Play football</p>
     <p>About me: Succeful bussines man and a professional engineer man</p>
