--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>About</h1>
     <p>Name: Ahmed</p>
     <p>Language: Html, python and java-script</p>
+    <p>Date of Birth: 1\04\1999</p>
     <p>Hobby: Play football</p>
     <p>About me: Succeful bussines man and a professional engineer man</p>
     </center>
