--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </center>
     <center>
 <h1>Contacts</h1>
-<a href="#"><button type="button" name="button">@gmail.com</button></a>
-    <a href="#"><button type="button" name="button">@facebook.com</button></a>
+<a target="_blank"href="https://mail.google.com"><button type="button" name="button">@gmail.com</button></a>
+    <a target="_blank"href="https://www.facebook.com/"><button type="button" name="button">@facebook.com</button></a>
     </center>
 
   </body>
