--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
 
     <h1>ABOUT</h1>
-    <p>Name: Ahmed Bdirashid Ali</p>
+    <p>Name: Ahmed Abdirashid Ali</p>
     <p>Language: Html, python and java-script</p>
     <p>Hobby: Play football</p>
     <p>About me: Succeful bussines man and a professional engineer man</p>
