--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <center>
-    <img src="images/ahmed3.jpg" alt=""> <br> <br>
+      <div class="container">
+
+      </div>
+    <img src="images/E7.jpg" class="img-responsive"> <br> <br>
     <a href="https://github.com/Abdirashid3262" target="_blank"> <button type="button" name="button">github</button></a>
-    <a href="https://www.instagram.com/ahmed_abdirashid_ali/?hl=en"target="_blank"> <button type="button" name="button">instergram</button></a>
+    <a href="https://www.instagram.com/ahmed_abdirashid_ali/?hl=en"target="_blank"> <button class="btn btn-default"type="button" name="button">instergram</button></a>
+
     </center>
     <center>
 
-    <h1>ABOUT</h1>
-    <p>Name: Ahmed Abdirashid Ali</p>
-    <p>Language: Html, python and java-script</p>
-    <p>Hobby: Play football</p>
-    <p>About me: Succeful bussines man and a professional engineer man</p>
+    <h1>More about Eid</h1>
+
+    <p>This is a special Day for all muslims in the world.A joyful occasion that marks the end of the holy month of Ramadan, the entire city comes together in celebration of Eid Al Fitr. The festive finale to the season of spiritual reflection, the holiday is all about spending quality time and sharing special moments with friends and family. Visitors from around the world flock to Dubai as it’s a fantastic time to experience the emirate</p>
     </center>
     <center>
 <h1>Contacts</h1>
